Version History
===============

0.2.5.3
-------

* Fixed mayaEnv.Maya, it was trying to convert None to absolute path when
  checking for external paths.

* Added post_open() to houdiniEnv.Houdini.

* In version_updater the column label "Latest" is changed to
  "Latest Published" to make it clear.

0.2.5.2
-------

* mayaEnv.Maya now creates all the folders defined in the
  pymel.core.workspace.fileRules dictionary.

* Creating a new Asset in version_creator now trigger the recreation of the
  project structure, this will allow any asset related folders to be created
  automatically. Change ``project_structure`` config value as desired.

* Added a new config value called ``maya_workspace_file_content`` to hold the
  workspace.mel content.

* version_creator UI now can work in read-only mode where it is only used for
  choosing existing versions.

0.2.5.1
-------

* Deletes are now cascaded. When a Project instance is deleted, all the related
  Sequence, Assets are also deleted, which also deletes the Shots and all the
  Version instances related to the deleted Assets and Shots. Also deleting a
  Sequence will delete the related Shots and thus the related Versions, and
  deleting an Asset will delete all the related Versions.

* In version_creator UI the notes of previous versions can now be changed by
  using the context menu on the previous_versions_tableWidget.

* project_properties dialog now warns the user for empty code field

* project_properties dialog now updates the code field when the name field is
  changed.

* mayaEnv now warns the user and rejects saving the file if there are external
  references (file textures, mentalray textures, ibl nodes etc.), which are not
  under $REPO.

* In version_creator the take name is now formatted for newly created takes, so
  every first letter of every word is now uppercase (title) and any fancy
  characters including empty spaces are replaced with underscores. And the